# OpenDataGov

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  sonar-project.properties
libs/python/odg-core/: alembic.ini  pyproject.toml
libs/python/odg-core/src/odg_core/: __init__.py  audit.py  audit_kafka.py  enums.py  expert.py  models.py  settings.py
libs/python/odg-core/src/odg_core/airflow/: __init__.py  dag_versioning.py
libs/python/odg-core/src/odg_core/audit/: __init__.py  compliance.py  encryption.py  service.py
libs/python/odg-core/src/odg_core/auth/: __init__.py  dependencies.py  keycloak.py  middleware.py  models.py  opa.py
libs/python/odg-core/src/odg_core/catalog/: __init__.py  datahub_client.py  events.py
libs/python/odg-core/src/odg_core/cdc/: __init__.py  cdc_consumer.py  connector_manager.py
libs/python/odg-core/src/odg_core/compliance/: __init__.py  ai_risk.py  dama.py  dama_coverage.py  eu_ai_act.py  gdpr.py  iso_42001.py  lgpd.py  model_card.py  nist_ai_rmf.py  protocols.py  registry.py  sox.py
libs/python/odg-core/src/odg_core/connectors/: __init__.py  (+4 more)
libs/python/odg-core/tests/: test_airflow_versioning.py  test_audit.py  test_audit_compliance.py  test_audit_encryption.py  test_audit_hash_chain.py  test_audit_kafka.py  test_audit_service.py  test_audit_vault_deep.py  test_auth.py  test_catalog_datahub.py  test_catalog_events.py  test_cdc_connector_manager.py  test_cdc_consumer_coverage.py  test_compliance.py  test_connectors_api.py  test_connectors_base.py  test_connectors_coverage.py  test_connectors_file_coverage.py  test_connectors_web_scraper.py  test_contracts.py  test_data_processing_coverage.py  test_data_processing_deep.py  test_duckdb_versioning.py  test_enums.py  test_event_schemas.py  test_events_coverage.py  test_events_kafka_consumer.py  test_events_kafka_publisher.py  test_expert.py  test_feast_materialization.py  test_federation_client.py  test_governance.py  test_graph_coverage.py  test_graph_janusgraph.py  test_graphql_deep.py  test_kafka_events.py  test_lineage.py  test_mesh_contract.py  test_mesh_data_product.py  test_mesh_domain.py  (+18 more)
libs/python/odg-core/tests/graphql/: __init__.py  test_resolvers.py  test_schema.py
libs/python/odg-core/tests/integration/: conftest.py  test_audit_kafka.py  test_auth_flow.py  test_datahub_sync.py  test_otel_pipeline.py  test_promotion_with_dq.py  test_quality_gate.py
libs/python/odg-mlops/: README.md  pyproject.toml
libs/python/odg-mlops/examples/: feast_materialization_tracking.py
libs/python/odg-mlops/src/odg_mlops/: __init__.py
libs/python/odg-sdk/: README.md  pyproject.toml
libs/python/odg-sdk/src/odg_sdk/: __init__.py  client.py  exceptions.py
libs/python/odg-sdk/tests/: __init__.py  test_access.py  test_client.py  test_datasets.py  test_decisions.py  test_quality.py
libs/python/odg-streaming/: pyproject.toml
services/code-expert/: pyproject.toml
services/code-expert/src/code_expert/: __init__.py  expert.py  main.py
services/data-expert/: Dockerfile  pyproject.toml
services/data-expert/src/data_expert/: __init__.py  expert.py  main.py
services/data-expert/src/data_expert/active_metadata/: __init__.py  discovery.py  rule_engine.py  rules.py
services/data-expert/src/data_expert/api/: __init__.py  routes.py  schemas.py
services/data-expert/tests/: __init__.py  test_expert.py
services/data-mesh-api/: pyproject.toml
services/data-mesh-api/src/data_mesh_api/: main.py
services/drift-monitor/: pyproject.toml
services/drift-monitor/src/drift_monitor/: __init__.py  main.py
services/drift-monitor/src/drift_monitor/consumers/: prediction_consumer.py
services/drift-monitor/src/drift_monitor/detectors/: evidently_detector.py
services/drift-monitor/src/drift_monitor/triggers/: retraining_trigger.py
services/governance-engine/: Dockerfile  pyproject.toml
services/governance-engine/src/governance_engine/: __init__.py  main.py  run_servers.py
services/governance-engine/src/governance_engine/api/: __init__.py  deps.py  routes_audit.py  routes_dashboard.py  routes_decisions.py  routes_graphql.py  routes_mlops.py  routes_roles.py  routes_self_service.py  schemas.py
services/governance-engine/src/governance_engine/domain/: __init__.py  approval_service.py  audit_service.py  decision_service.py  role_service.py  veto_service.py
services/governance-engine/src/governance_engine/events/: __init__.py  kafka_consumer.py  kafka_producer.py  publisher.py
services/governance-engine/src/governance_engine/grpc/: __init__.py  governance_service.py  server.py
services/governance-engine/src/governance_engine/repository/: __init__.py  postgres.py  protocols.py
services/governance-engine/src/governance_engine/webhooks/: __init__.py  kserve.py
services/governance-engine/tests/: conftest.py  test_audit_chain.py  test_audit_routes.py  test_dashboard_routes.py  test_decision_lifecycle.py  test_decision_routes.py  test_e2e_workflow.py  test_edge_cases.py  test_grpc_server.py  test_kafka_events.py  test_main.py  test_mlops_routes.py  test_publisher.py  test_self_service_routes.py
services/lakehouse-agent/: Dockerfile  pyproject.toml
services/lakehouse-agent/src/lakehouse_agent/: __init__.py  main.py  minio_client.py  promotion.py  protocols.py
services/lakehouse-agent/src/lakehouse_agent/api/: __init__.py  routes_buckets.py  routes_comparison.py  routes_promotion.py  routes_versioning.py
services/lakehouse-agent/tests/: test_promotion.py
services/metadata-ingestion/: pyproject.toml
services/metadata-ingestion/src/metadata_ingestion/: __init__.py  ingestion_service.py
services/quality-gate/: Dockerfile  pyproject.toml
services/quality-gate/src/quality_gate/: engine.py  main.py
services/quality-gate/src/quality_gate/api/: routes.py  schemas.py
services/quality-gate/tests/: test_engine.py  test_scoring.py
tools/cli/: README.md  pyproject.toml
tools/cli/src/odg_cli/: __init__.py  config.py  main.py
tools/cli/src/odg_cli/commands/: access.py  config.py  dataset.py  decision.py
(+509 files in other folders)
