[project]
name = "OpenDataGov"
version = "0.1.0"
description = "Open-source data governance platform with progressive AI capabilities"
requires-python = ">=3.13"
license = "Apache-2.0"

[dependency-groups]
dev = [
    "odg-core",
    "governance-engine",
    "lakehouse-agent",
    "data-expert",
    "quality-gate",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0",

    # Type stubs to reduce mypy missing-imports errors during CI and local dev
    "types-requests",
    "types-grpcio",
    "types-protobuf",
    "pandas-stubs",
    "scipy-stubs",
    "types-hvac",
]

[tool.uv.sources]
odg-core = { workspace = true }
governance-engine = { workspace = true }
lakehouse-agent = { workspace = true }
data-expert = { workspace = true }
quality-gate = { workspace = true }

[tool.uv.workspace]
members = [
    "libs/python/odg-core",
    "services/governance-engine",
    "services/lakehouse-agent",
    "services/data-expert",
    "services/quality-gate",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"**/api/*.py" = ["TCH", "B008"]      # FastAPI evaluates annotations at runtime; Depends/Query in defaults
"**/main.py" = ["TCH", "B008"]       # lifespan/app startup needs runtime imports; Depends/Query in defaults
"**/tests/*.py" = ["TCH"]            # pytest fixtures resolve types at runtime
"**/auth.py" = ["B008"]              # FastAPI Depends/Security in defaults
"examples/*.py" = ["E402"]           # examples use inline imports for readability
"**/grpc/*.py" = ["N802"]            # gRPC methods follow PascalCase convention
"**/components/*.py" = ["N806"]      # sklearn uses uppercase X convention
"**/graphql/schema.py" = ["A002"]    # GraphQL resolvers use `id` parameter

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "fastapi",
    "fastapi.*",
    "nats",
    "nats.*",
    "minio",
    "minio.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "governance_engine.api.*",
    "governance_engine.main",
    "lakehouse_agent.api.*",
    "lakehouse_agent.main",
    "data_expert.api.*",
    "data_expert.main",
    "quality_gate.api.*",
    "quality_gate.main",
]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "odg_core.proto_gen.*",
    "odg_core.proto_gen",
]
# Generated protobuf/grpc code is not typed by us; relax untyped-def checks for these files
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "libs/python/odg-core/tests",
    "services/governance-engine/tests",
    "services/lakehouse-agent/tests",
    "services/data-expert/tests",
    "services/quality-gate/tests",
]
addopts = "-ra --strict-markers --import-mode=importlib"
markers = [
    "kafka: requires running Kafka cluster (port-forward to Kind)",
]

[tool.coverage.run]
source = [
    "odg_core",
    "governance_engine",
    "lakehouse_agent",
    "data_expert",
    "quality_gate",
]
omit = [
    "*/migrations/*",
    "*/proto_gen/*",
    "services/governance-engine/src/governance_engine/repository/postgres.py",
    "services/governance-engine/src/governance_engine/grpc/*",
    "services/governance-engine/src/governance_engine/events/kafka_*",
    "services/governance-engine/src/governance_engine/run_servers.py",
    "services/governance-engine/src/governance_engine/webhooks/*",
    "services/lakehouse-agent/src/lakehouse_agent/api/*",
    "services/lakehouse-agent/src/lakehouse_agent/main.py",
    "services/lakehouse-agent/src/lakehouse_agent/minio_client.py",
    "services/quality-gate/src/quality_gate/api/*",
    "services/quality-gate/src/quality_gate/main.py",
    "services/governance-engine/src/governance_engine/api/deps.py",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
]
